[update] plot spans of beats

--- a/note.html
+++ b/note.html
@@ -26,6 +26,35 @@ CDEG-G4|GFED-D4|DCDC-C4|CCCC-C4|]
 <div id="editor"></div>
 
 <script type="text/javascript" charset="UTF-8" defer>
+document.querySelector('#abc-text').value = `X: 906
+T: 耶穌對我真好
+M: 4/4
+L: 1/8
+Q: 1/4=148
+K: G
+%%staves (chord melody)
+V: melody stem=solo
+G2 GG- GF2E- |[K:G]ED2D- D4 |[M:4/4]G2 GG- GF2E- |[M:4/4][K:G]ED2D zB, DE- |
+w: 耶 穌 曾 ~ 為 我 ~ 捨 命 ~ 祂 已 從 ~ 死 裡 ~ 復 活 祂 是 主
+w: 祂 活 在 ~ 我 的 ~ 心 裡 ~ 運 行 在 ~ 我 生 ~ 命 中 ~ ~ ~
+-E6 E2 |F6 A2 |A3D- D2 D2- |D6 z2 |
+w: ~ 我 神 得 勝 的 ~ 主 ~
+GG GG- GF2E- |ED2D- D4 |GG GG- GF2E- |ED2D zB, DE- |
+w: 死 亡 權 勢 ~ 已 被 ~ 打 敗 ~ 爭 戰 得 勝 ~ 生 命 ~ 恢 復 祂 是 主
+w: 耶 穌 充 滿 ~ 在 我 ~ 心 以 ~ 祂 無 比 的 ~ 大 愛 ~ ~ ~ ~ ~ ~
+-E6 E2 |F6 A2 |A3G- G2 G2- |G6 z2 |
+w: ~ 我 神 得 勝 的 ~ 主 ~
+|:B3B- BA2A- |AG2G- G4 |A3A- AG2G- |GF2F- F4 |
+w: 耶 穌 ~ 對 我 ~ 真 好 ~ 耶 穌 ~ 對 你 ~ 真 好 ~
+E2 G6 |G2 FG- G2 A2 |1 A4 D3D- |D6 z2 :|2 A4 G3 G- |G8 |]
+w: 耶 穌 祂 對 我 ~ 對 你 真 好 ~ 你 真 好 ~
+V: chord
+"G"x8|[K:G]x8|[M:4/4]x8|[M:4/4][K:G]x8|
+"C"x8|"D"x8|"G"x8|x8|
+"G"x8|x8|x8|x8|
+"C"x8|"D"x8|"Em7"x8|x8|
+|:"Cmaj7"x8|x8|"Bm7"x8|x8|
+"Am7"x8|"D"x8|1"G6"x8|"G"x8:|2"Am/G"x7"G"x1|x8|]`
 </script>
 </body>
 </html>
