[update] hide measure-divide values that are not proper on the given time signature

--- a/note.html
+++ b/note.html
@@ -19,17 +19,16 @@ CDEG-G4|GFED-D4|DCDC-C4|CCCC-C4|]
 </textarea>
 <div>
 	<label>小節分割</label>
-	<form id="measure-divide">
-		<label><input type="radio" name="measure-divide" value="1" checked/>1</label>
-		<label><input type="radio" name="measure-divide" value="2"/>2</label>
-		<label><input type="radio" name="measure-divide" value="3"/>3</label>
-		<label><input type="radio" name="measure-divide" value="4"/>4</label>
-		<label><input type="radio" name="measure-divide" value="6"/>6</label>
-		<label><input type="radio" name="measure-divide" value="8"/>8</label>
+	<form id="measure-divide" data-beat-num="4">
+		<label value="1"><input type="radio" name="measure-divide" value="1" checked/>1</label>
+		<label value="2"><input type="radio" name="measure-divide" value="2"/>2</label>
+		<label value="3"><input type="radio" name="measure-divide" value="3"/>3</label>
+		<label value="4"><input type="radio" name="measure-divide" value="4"/>4</label>
+		<label value="6"><input type="radio" name="measure-divide" value="6"/>6</label>
+		<label value="8"><input type="radio" name="measure-divide" value="8"/>8</label>
 	</form>
 </div>
 
-<label>Editor:</label>
 <div id="editor"></div>
 
 <div class="chord-composer-container">
