[update] use button styles for measure-divide settings

--- a/note.html
+++ b/note.html
@@ -20,12 +20,12 @@ CDEG-G4|GFED-D4|DCDC-C4|CCCC-C4|]
 <div>
 	<label>小節分割</label>
 	<form id="measure-divide" data-beat-num="4">
-		<label value="1"><input type="radio" name="measure-divide" value="1" checked/>1</label>
-		<label value="2"><input type="radio" name="measure-divide" value="2"/>2</label>
-		<label value="3"><input type="radio" name="measure-divide" value="3"/>3</label>
-		<label value="4"><input type="radio" name="measure-divide" value="4"/>4</label>
-		<label value="6"><input type="radio" name="measure-divide" value="6"/>6</label>
-		<label value="8"><input type="radio" name="measure-divide" value="8"/>8</label>
+		<input type="radio" id="md-1" name="measure-divide" value="1" checked/><label value="1" for="md-1">1</label>
+		<input type="radio" id="md-2" name="measure-divide" value="2"/>        <label value="2" for="md-2">2</label>
+		<input type="radio" id="md-3" name="measure-divide" value="3"/>        <label value="3" for="md-3">3</label>
+		<input type="radio" id="md-4" name="measure-divide" value="4"/>        <label value="4" for="md-4">4</label>
+		<input type="radio" id="md-6" name="measure-divide" value="6"/>        <label value="6" for="md-6">6</label>
+		<input type="radio" id="md-8" name="measure-divide" value="8"/>        <label value="8" for="md-8">8</label>
 	</form>
 </div>
 
