--- a/note.html
+++ b/note.html
@@ -9,15 +9,12 @@
 </head>
 <body>
 
-<textarea id="abc-text">
-X:1
-T:ABC
-M:4/4
-K:C
-Q:1/4=100
-CDEG-G4|GFED-D4|DCDC-C4|CCCC-C4|]
-</textarea>
-<div>
+<div class="setting">
+	<input type="checkbox" id="open-textarea">
+	<label for="open-textarea">原始文字</label>
+	<textarea id="abc-text"></textarea>
+</div>
+<div class="setting">
 	<label>小節分割</label>
 	<form id="measure-divide" data-beat-num="4">
 		<input type="radio" id="md-1" name="measure-divide" value="1" checked/><label value="1" for="md-1">1</label>
