--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>和弦編輯器</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<script type="text/javascript" charset="UTF-8" src="abcjs_basic_5.10.3-min.js" defer></script>
 	<script type="text/javascript" charset="UTF-8" src="js_utils.js"></script>
 	<script type="text/javascript" charset="UTF-8" src="abc_script.js" defer></script>
