[update] re-structure how we load and display

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<label for="search-song">搜尋</label>
 	<div id="search-song-container">
 		<input type="search" id="search-song"/>
+		<input type="hidden" id="current-song"/>
 		<div id="song-list" tabindex="2"></div>
 	</div>
 	<button id="load-song">載入</button>
