[style] style of open-textarea label

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 <div class="setting">
 	<input type="checkbox" id="open-textarea">
-	<label for="open-textarea">原始文字</label>
+	<label for="open-textarea" tabindex="3">原始文字</label>
 	<textarea id="abc-text"></textarea>
 </div>
 <div class="setting">
