[style] style of search bar and load, save buttons

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
 
-<div class="setting">
-	<label for="search-song">搜尋</label>
+<div id="load-save-setting" class="setting">
 	<div id="search-song-container">
 		<input type="search" id="search-song"/>
 		<input type="hidden" id="current-song"/>
