[fix] add default value of current song

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="load-save-setting" class="setting">
 	<div id="search-song-container">
 		<input type="search" id="search-song"/>
-		<input type="hidden" id="current-song"/>
+		<input type="hidden" id="current-song" value="1"/>
 		<div id="song-list" tabindex="2"></div>
 	</div>
 	<button id="load-song">載入</button>
