[fix] try to fix the glitch move of search bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div id="load-save-setting" class="setting">
 	<div id="search-song-container">
-		<input type="search" id="search-song"/>
+		<input type="search" id="search-song" value="詩歌"/>
 		<input type="hidden" id="current-song" value="1"/>
 		<div id="song-list" tabindex="2"></div>
 	</div>
